--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Files Environment Tests
+data_docentes.json
+data_disciplinas.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
