Preparada a estrutura básica para receber a aplicação web.

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ requests = "*"
 beautifulsoup4 = "*"
 lxml = "*"
 pylint = "*"
+sqlalchemy = "*"
+python-dotenv = "*"
+flask = "*"
 
 [requires]
 python_version = "3.6"
