--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ pylint = "*"
 python-dotenv = "*"
 flask = "*"
 flask-wtf = "*"
+pdfkit = "*"
+wkhtmltopdf = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
